Add AlarmTImeUtil